[package]
name = "cargo-cratesup"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Ali Mehasin <alimehasin@icloud.com>"]
repository = "https://github.com/alimehasin/cargo-cratesup"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cargo", "cargo-subcommand", "dependency", "update", "check"]
description = "A Cargo subcommand that scans your Cargo.toml dependencies and checks for available updates to help you keep your dependencies up-to-date."


[dependencies]
semver = "1.0.24"
colored = "3.0.0"
spinners = "4.1.1"
toml_edit = "0.22.22"
crates_io_api = "0.11.0"
cargo_metadata = "0.19.1"
clap = { version = "4.5.26", features = ["derive"] }
